--- a/src/main/resources/org/jenkinsci/plugins/xunit/Messages.properties
+++ b/src/main/resources/org/jenkinsci/plugins/xunit/Messages.properties
@@ -1,2 +1,2 @@
-xUnit.BuilderName=Process xUnit test result report
-xUnit.PublisherName=Publish xUnit test result report
+xUnit.BuilderName=Process xUnit test result report(Legacy)
+xUnit.PublisherName=Publish xUnit test result report(Legacy)
